--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.main{
+ display: flex  ;
+ padding: 50px;
+}
+.account{
+  height: 100vh;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.chart{
+  height: 600px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.payment{
+  width: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+li{
+  list-style: none;
+  font-size: large;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.basicFont{
+  text-transform: capitalize;
+}
+.button{
+  width: 80px;
+  margin-top: 20px;
+  background-color: rgb(10, 10, 9);
+  height: 30px;
   color: white;
+  cursor: pointer;
+}
+.balance{
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: medium;
+  text-transform: capitalize;
+
+}
+input{
+  height: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
